--- a/index.html
+++ b/index.html
@@ -49,54 +49,54 @@
   
 
   <!-- Main Body goes in Container -->
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-8">
-          <p 
+  <div class="card"
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-8">
+          <p class="title-left" 
             style="
-                font-weight: 500;
-                font-size: 32px;
-                margin: 40px;
-            ">
+              font-weight: 500;
+              font-size: 32px;
+              margin: 40px;"
+            >
             About Me</p>
+        </div>
+
       </div>
-      
-    </div>
-    <div class="row" 
+      <div class="row" 
         style=" 
           border-radius: 25px;
           border-style: solid;
           border-color: black;
-          border-width: 5px;
+          border-width: 3px;
           text-align: left;">
-      <div class="col-sm">
-        <img src="assets/images/about.jpg" class="img-fluid" class="hoverable"
-          style="
-            border-radius: 25px;
-            margin-top: 10px; 
-            margin-bottom: 10px;">
+        <div class="col-sm">
+          <img src="Assets/images/about4.jpg" class="img-fluid"
+            style="
+              border-radius: 25px;
+              margin-top: 10px; 
+              margin-bottom: 10px;"
+            >
+        </div>
+        <div class="col-sm-8" class="text-left" style="margin-top: 10px; margin-bottom: 10px;">
+              <p class="text-justify">
+                Greetings! My name is Matthew Henry and I am an aspiring Web Developer. The purpose of this website is to organize and showcase my completed Web Development Projects. Thanks for checking out my portfolio and if you have any questions or concerns head to the 'Contact' section located in the top right.  
+              </p>
+            </div>
+          </div>  
       </div>
-      <div class="col" class="text-left" style="margin-top: 10px; margin-bottom: 10px;">Greetings! My name is Matthew Henry and I am an aspiring Web Developer. The purpose of this website is to organize and showcase my completed Web Development Projects. Thanks for checking out my portfolio and if you have any questions or concerns head to the 'Contact' section located in the top right. </div>
     </div>
   </div>
-
-  <!-- Here we bring in some scripts required to allow some Bootstrap components to work.
-    For now, this is code to copy and paste. We'll get to script elements soon enough. -->
-  <script
-    src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"
-  ></script>
-  <script
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"
-  ></script>
+  <!-- Footer -->
+  <footer class="page-footer font-small blue bg-dark">
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2020 Copyright:
+      <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+    </div>
+    <!-- Copyright -->
+  
+  </footer>
+  <!-- Footer -->   
 </body>
 
 </html>
