added alt tag to images

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           border-width: 3px;
           text-align: left;">
         <div class="col-sm">
-          <img src="Assets/images/about4.jpg" class="img-fluid"
+          <img src="Assets/Images/about4.jpg" class="img-fluid" alt="man-in-suit"
             style="
               border-radius: 25px;
               margin-top: 10px; 
