--- a/portfolio.html
+++ b/portfolio.html
@@ -58,12 +58,12 @@
                 </div>
                 </div>
                 <div class="col">
-                    <img class="img-fluid" src="Assets/images/portfolio1.jpg" style="margin-top: 10px; margin-bottom: 10px; border-radius: 25px;"/>
+                    <img class="img-fluid" src="Assets/Images/portfolio1.jpg" style="margin-top: 10px; margin-bottom: 10px; border-radius: 25px;" alt="teamwork"/>
                 </div>
             </div>
             <div class="row"style="; border-color: black;border-width: 5px;text-align: left;margin: 20px;">
                 <div class="col">
-                  <img class="img-fluid" src="Assets/images/portfolio3.jpg" style="margin-top: 10px; margin-bottom: 10px; border-radius: 25px; border-width: 5px; border-style:solid; border-color:rgb(31, 90, 92)" />
+                  <img class="img-fluid" src="Assets/Images/portfolio3.jpg" style="margin-top: 10px; margin-bottom: 10px; border-radius: 25px; border-width: 5px; border-style:solid; border-color:rgb(31, 90, 92)" alt="computer-laptop"/>
                 </div>
                 <div class="col" style="margin-top: 10px; margin-bottom: 10px;">
                   <div class="card">
@@ -105,7 +105,7 @@
                   </div>
                 </div>
                 <div class="col">
-                  <img class="img-fluid" src="Assets/images/portfolio2.jpg" style="margin-top: 10px; margin-bottom: 10px; border-radius: 25px;"/>
+                  <img class="img-fluid" src="Assets/Images/portfolio2.jpg" style="margin-top: 10px; margin-bottom: 10px; border-radius: 25px;" alt="block-of-code"/>
                 </div>
             </div>
         </div>  
