--- a/contact.html
+++ b/contact.html
@@ -90,7 +90,7 @@
                     <div class="title-box-2 pt-4 pt-md-0">
                       <div class="row"
                         <div class="col">
-                          <img class="img-thumbnail" src="Assets/images/contact.jpg" style="margin-top: 5px; margin-bottom: 5px; border-radius: 10px;"/>  
+                          <img class="img-thumbnail" src="Assets/Images/contact.jpg" style="margin-top: 5px; margin-bottom: 5px; border-radius: 10px;" alt="phone-image"/>  
                         <div>
                       </div>
                     </div>
