--- a/index.html
+++ b/index.html
@@ -47,48 +47,60 @@
   </nav>
 
   
-
+  <div class="row">
+    <div class="col-sm-8">
+      <p class="title-left" 
+        style="
+          font-weight: 500;
+          font-size: 32px;
+          margin: 40px;"
+        >
+        About Me</p>
+    </div>
+  </div>
+  
   <!-- Main Body goes in Container -->
-  <div class="card"
-    <div class="container">
-      <div class="row">
-        <div class="col-sm-8">
-          <p class="title-left" 
-            style="
-              font-weight: 500;
-              font-size: 32px;
-              margin: 40px;"
-            >
-            About Me</p>
-        </div>
+  <div class="container">
+    <div class="card" style=" 
+      border-radius: 25px;
+      border-style: solid;
+      border-color: black;
+      border-width: 3px;
+      text-align: left;">
+      <div class="row"> 
 
-      </div>
-      <div class="row" 
-        style=" 
-          border-radius: 25px;
-          border-style: solid;
-          border-color: black;
-          border-width: 3px;
-          text-align: left;">
         <div class="col-sm">
           <img src="Assets/Images/about4.jpg" class="img-fluid" alt="man-in-suit"
             style="
               border-radius: 25px;
               margin-top: 10px; 
-              margin-bottom: 10px;"
+              margin-bottom: 10px;
+              margin-left:10px;
+              margin-right:10px;"
             >
         </div>
-        <div class="col-sm-8" class="text-left" style="margin-top: 10px; margin-bottom: 10px;">
-              <p class="text-justify">
-                Greetings! My name is Matthew Henry and I am an aspiring Web Developer. The purpose of this website is to organize and showcase my completed Web Development Projects. Thanks for checking out my portfolio and if you have any questions or concerns head to the 'Contact' section located in the top right.  
-              </p>
-            </div>
-          </div>  
-      </div>
+        <div class="col-sm" class="text-left" style="margin-top: 10px; margin-bottom: 10px; margin-right:10px; margin-left:10px;">
+          <p class="text-justify">
+            Greetings! My name is Matthew Henry and I am an aspiring Web Developer. The purpose of this website is to organize and showcase my completed Web Development Projects. Thanks for checking out my portfolio and if you have any questions or concerns head to the 'Contact' section located in the top right.  
+          </p>
+        </div>
+        
+      </div>   
+      
     </div>
   </div>
   <!-- Footer -->
-  <footer class="page-footer font-small blue bg-dark">
+  <footer class="page-footer font-small blue bg-dark" style="
+    margin-top: 10px; 
+    margin-bottom:-10px;                  
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #2A333D;
+    color: white;
+    text-align: center;
+    font-weight: 200;
+    margin: 5px;">
     <!-- Copyright -->
     <div class="footer-copyright text-center py-3">© 2020 Copyright:
       <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
