fixed format issues

--- a/contact.html
+++ b/contact.html
@@ -122,8 +122,8 @@
     <!-- Footer -->
     <footer class="page-footer font-small blue bg-dark" style="
       margin-top: 10px; 
-      margin-bottom:-10px                  
-      position fixed;
+      margin-bottom:-10px;                  
+      position: fixed;
       left: 0;
       bottom: 0;
       width: 100%;
