--- a/index.html
+++ b/index.html
@@ -89,26 +89,24 @@
       
     </div>
   </div>
-  <!-- Footer -->
   <footer class="page-footer font-small blue bg-dark" style="
-    margin-top: 10px; 
-    margin-bottom:-10px;                  
-    left: 0;
-    bottom: 0;
-    width: 100%;
-    background-color: #2A333D;
-    color: white;
-    text-align: center;
-    font-weight: 200;
-    margin: 5px;">
-    <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
-    </div>
-    <!-- Copyright -->
-  
-  </footer>
-  <!-- Footer -->   
+  margin-top: 10px; 
+  margin-bottom:-10px;                  
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #2A333D;
+  color: white;
+  text-align: center;
+  font-weight: 200;
+  margin: 5px;">
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2020 Copyright:
+    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+  </div>
+  <!-- Copyright -->
+  </footer>  
 </body>
 
 </html>
