--- a/contact.html
+++ b/contact.html
@@ -100,15 +100,18 @@
                       </div>
                       
                     
-                      <p class="lead">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis dolorum dolorem soluta quidem
-                        expedita aperiam aliquid at.
-                        Totam magni ipsum suscipit amet? Autem nemo esse laboriosam ratione nobis
-                        mollitia inventore?
-                      </p>
+
                       <ul class="list-ico">
                         <li><span class="ion-ios-telephone"></span>(919)260-8642</li>
                         <li><span class="ion-email"></span> matt.henry144@gmail.com</li>
+                        <div class="btnLinks">
+                          <a href="Resume_1.pdf" class="zoom btn btn-primary"
+                              target="_blank"><strong>Resume</strong></a>
+                          <a href="https://github.com/itsTadae" class="zoom btn btn-primary"
+                              target="_blank"><strong>GitHub</strong></a>
+                          <a href="https://www.linkedin.com/in/matthew-henry-wd/" class="zoom btn btn-primary"
+                              target="_blank"><strong>LinkedIn</strong></a>
+                      </div>
                       </ul>
                     </div>
                   </div>
