--- a/portfolio.html
+++ b/portfolio.html
@@ -221,6 +221,178 @@
           />
         </div>
       </div>
+      <div
+        class="row"
+        style="
+          border-color: black;
+          border-width: 5px;
+          text-align: left;
+          margin: 20px;
+        "
+      >
+        <div class="col">
+          <img
+            class="img-fluid"
+            src="Assets/Images/weather-dashboard.PNG"
+            style="
+              margin-top: 10px;
+              margin-bottom: 10px;
+              border-radius: 25px;
+              border-width: 5px;
+              border-style: solid;
+              border-color: rgba(189, 173, 173, 0.568);
+            "
+            alt="weather-dashboard"
+          />
+        </div>
+        <div class="col" style="margin-top: 10px; margin-bottom: 10px;">
+          <div class="card">
+            <div class="card-header">
+              <h5 class="title-left">Weather Dashboard</h5>
+            </div>
+            <div class="card-body">
+              <p class="card-text">
+                The Weather Dashboard project is a website that is designed to
+                show the 5-day weather forecast for a given city that the user
+                is interested in. In addition to the 5-day forecast, the website
+                also provides the current weather for the city of interest, such
+                as the temperature in degrees fahrenheit, humidity, and wind
+                speed. Lastly, the weather dashboard offers a search history
+                function in which the user can view any previous city's that
+                they have searched for in the past.
+              </p>
+              <div class="card-bottom">
+                <a
+                  href="https://github.com/itsTadae/Weather-Dashboard"
+                  class="zoom btn btn-primary"
+                  target="_blank"
+                  ><strong>GitHub</strong></a
+                >
+                <a
+                  href="https://itstadae.github.io/Weather-Dashboard/"
+                  class="zoom btn btn-primary"
+                  target="_blank"
+                  ><strong>Website</strong></a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Project 2 -->
+        <div
+          class="row"
+          style="
+            border-color: black;
+            border-width: 5px;
+            text-align: left;
+            margin: 20px;
+          "
+        >
+          <div class="col" style="margin-top: 10px; margin-bottom: 10px;">
+            <div class="card">
+              <div class="card-header">
+                <h5 class="title-left">TourZing</h5>
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Welcome to TourZing, your one stop place for matching tourists
+                  with excellent tour guides and amazing tours. When you go on
+                  vacation, you want maximize the time you have to see the best
+                  sights and have the best experience possible. Our curated list
+                  of experienced tour guides know the where and when of the
+                  premier local sites and establishments in your place of
+                  choice. So come along and tour with us!
+                </p>
+                <div class="card-bottom">
+                  <a
+                    href="https://github.com/itsTadae/Project2"
+                    class="zoom btn btn-primary"
+                    target="_blank"
+                    ><strong>GitHub</strong></a
+                  >
+                  <a
+                    href="https://degrassi-syrup-05027.herokuapp.com/"
+                    class="zoom btn btn-primary"
+                    target="_blank"
+                    ><strong>Website</strong></a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <img
+              class="img-fluid"
+              src="Assets/Images/tourzing.PNG"
+              style="
+                margin-top: 10px;
+                margin-bottom: 10px;
+                border-radius: 25px;
+                border-width: 5px;
+                border-style: solid;
+                border-color: rgba(189, 173, 173, 0.568);
+              "
+              alt="password-generator"
+            />
+          </div>
+        </div>
+        <div
+          class="row"
+          style="
+            border-color: black;
+            border-width: 5px;
+            text-align: left;
+            margin: 20px;
+          "
+        >
+          <div class="col" style="margin-top: 10px; margin-bottom: 10px;">
+            <div class="card">
+              <div class="card-header">
+                <h5 class="title-left">Password Generator</h5>
+              </div>
+              <div class="card-body">
+                <p class="card-text">
+                  Eat-Da-Burger is a restaurant app that lets users input the
+                  names of burgers they'd like to eat. When the user submits the
+                  name of the burger they would like to eat, it is placed on the
+                  left side of the page. Once the user clicks on the 'Devour
+                  it!' button, the burger will be devoured and moved to the
+                  right side of the page.
+                </p>
+                <div class="card-bottom">
+                  <a
+                    href="https://github.com/itsTadae/burger-logger"
+                    class="zoom btn btn-primary"
+                    target="_blank"
+                    ><strong>GitHub</strong></a
+                  >
+                  <a
+                    href="https://stormy-bastion-47802.herokuapp.com/"
+                    class="zoom btn btn-primary"
+                    target="_blank"
+                    ><strong>Website</strong></a
+                  >
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <img
+              class="img-fluid"
+              src="Assets/Images/daburger.PNG"
+              style="
+                margin-top: 10px;
+                margin-bottom: 10px;
+                border-radius: 25px;
+                border-width: 5px;
+                border-style: solid;
+                border-color: rgba(189, 173, 173, 0.568);
+              "
+              alt="password-generator"
+            />
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Footer -->
