--- a/portfolio.html
+++ b/portfolio.html
@@ -75,13 +75,13 @@
               </p>
               <div class="card-bottom">
                 <a
-                  href="https://github.com/itsTadae/Savor"
+                  href="https://github.com/mhenry144/Savor"
                   class="zoom btn btn-primary"
                   target="_blank"
                   ><strong>GitHub</strong></a
                 >
                 <a
-                  href="https://itstadae.github.io/Savor/"
+                  href="https://mhenry144.github.io/Savor/"
                   class="zoom btn btn-primary"
                   target="_blank"
                   ><strong>Website</strong></a
@@ -148,13 +148,13 @@
               </p>
               <div class="card-bottom">
                 <a
-                  href="https://github.com/itsTadae/Weather-Dashboard"
+                  href="https://github.com/mhenry144/Weather-Dashboard"
                   class="zoom btn btn-primary"
                   target="_blank"
                   ><strong>GitHub</strong></a
                 >
                 <a
-                  href="https://itstadae.github.io/Weather-Dashboard/"
+                  href="https://mhenry144.github.io/Weather-Dashboard/"
                   class="zoom btn btn-primary"
                   target="_blank"
                   ><strong>Website</strong></a
@@ -190,13 +190,13 @@
               </p>
               <div class="card-bottom">
                 <a
-                  href="https://github.com/itsTadae/password-generator"
+                  href="https://github.com/mhenry144/password-generator"
                   class="zoom btn btn-primary"
                   target="_blank"
                   ><strong>GitHub</strong></a
                 >
                 <a
-                  href="https://itstadae.github.io/password-generator/"
+                  href="https://mhenry144.github.io/password-generator/"
                   class="zoom btn btn-primary"
                   target="_blank"
                   ><strong>Website</strong></a
@@ -263,13 +263,13 @@
               </p>
               <div class="card-bottom">
                 <a
-                  href="https://github.com/itsTadae/Weather-Dashboard"
+                  href="https://github.com/mhenry144/Weather-Dashboard"
                   class="zoom btn btn-primary"
                   target="_blank"
                   ><strong>GitHub</strong></a
                 >
                 <a
-                  href="https://itstadae.github.io/Weather-Dashboard/"
+                  href="https://mhenry144.github.io/Weather-Dashboard/"
                   class="zoom btn btn-primary"
                   target="_blank"
                   ><strong>Website</strong></a
@@ -305,7 +305,7 @@
                 </p>
                 <div class="card-bottom">
                   <a
-                    href="https://github.com/itsTadae/Project2"
+                    href="https://github.com/mhenry144/Project2"
                     class="zoom btn btn-primary"
                     target="_blank"
                     ><strong>GitHub</strong></a
@@ -361,7 +361,7 @@
                 </p>
                 <div class="card-bottom">
                   <a
-                    href="https://github.com/itsTadae/burger-logger"
+                    href="https://github.com/mhenry144/burger-logger"
                     class="zoom btn btn-primary"
                     target="_blank"
                     ><strong>GitHub</strong></a
