--- a/portfolio.html
+++ b/portfolio.html
@@ -56,7 +56,7 @@
           margin: 20px;
         "
       >
-        <div class="col" style="margin-top: 10px; margin-bottom: 10px;">
+        <div class="col" style="margin-top: 10px; margin-bottom: 10px">
           <div class="card">
             <div class="card-header">
               <h5 class="title-left">Savor</h5>
@@ -130,7 +130,7 @@
             alt="weather-dashboard"
           />
         </div>
-        <div class="col" style="margin-top: 10px; margin-bottom: 10px;">
+        <div class="col" style="margin-top: 10px; margin-bottom: 10px">
           <div class="card">
             <div class="card-header">
               <h5 class="title-left">Weather Dashboard</h5>
@@ -173,7 +173,7 @@
           margin: 20px;
         "
       >
-        <div class="col" style="margin-top: 10px; margin-bottom: 10px;">
+        <div class="col" style="margin-top: 10px; margin-bottom: 10px">
           <div class="card">
             <div class="card-header">
               <h5 class="title-left">Password Generator</h5>
@@ -230,65 +230,23 @@
           margin: 20px;
         "
       >
-        <div class="col">
-          <img
-            class="img-fluid"
-            src="Assets/Images/weather-dashboard.PNG"
-            style="
-              margin-top: 10px;
-              margin-bottom: 10px;
-              border-radius: 25px;
-              border-width: 5px;
-              border-style: solid;
-              border-color: rgba(189, 173, 173, 0.568);
-            "
-            alt="weather-dashboard"
-          />
-        </div>
-        <div class="col" style="margin-top: 10px; margin-bottom: 10px;">
-          <div class="card">
-            <div class="card-header">
-              <h5 class="title-left">Weather Dashboard</h5>
-            </div>
-            <div class="card-body">
-              <p class="card-text">
-                The Weather Dashboard project is a website that is designed to
-                show the 5-day weather forecast for a given city that the user
-                is interested in. In addition to the 5-day forecast, the website
-                also provides the current weather for the city of interest, such
-                as the temperature in degrees fahrenheit, humidity, and wind
-                speed. Lastly, the weather dashboard offers a search history
-                function in which the user can view any previous city's that
-                they have searched for in the past.
-              </p>
-              <div class="card-bottom">
-                <a
-                  href="https://github.com/mhenry144/Weather-Dashboard"
-                  class="zoom btn btn-primary"
-                  target="_blank"
-                  ><strong>GitHub</strong></a
-                >
-                <a
-                  href="https://mhenry144.github.io/Weather-Dashboard/"
-                  class="zoom btn btn-primary"
-                  target="_blank"
-                  ><strong>Website</strong></a
-                >
-              </div>
-            </div>
-          </div>
-        </div>
         <!-- Project 2 -->
-        <div
-          class="row"
-          style="
-            border-color: black;
-            border-width: 5px;
-            text-align: left;
-            margin: 20px;
-          "
-        >
-          <div class="col" style="margin-top: 10px; margin-bottom: 10px;">
+          <div class="col">
+            <img
+              class="img-fluid"
+              src="Assets/Images/tourzing.PNG"
+              style="
+                margin-top: 10px;
+                margin-bottom: 10px;
+                border-radius: 25px;
+                border-width: 5px;
+                border-style: solid;
+                border-color: rgba(189, 173, 173, 0.568);
+              "
+              alt="tourzing"
+            />
+          </div>
+          <div class="col" style="margin-top: 10px; margin-bottom: 10px">
             <div class="card">
               <div class="card-header">
                 <h5 class="title-left">TourZing</h5>
@@ -320,21 +278,7 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <img
-              class="img-fluid"
-              src="Assets/Images/tourzing.PNG"
-              style="
-                margin-top: 10px;
-                margin-bottom: 10px;
-                border-radius: 25px;
-                border-width: 5px;
-                border-style: solid;
-                border-color: rgba(189, 173, 173, 0.568);
-              "
-              alt="password-generator"
-            />
-          </div>
+
         </div>
         <div
           class="row"
@@ -345,10 +289,10 @@
             margin: 20px;
           "
         >
-          <div class="col" style="margin-top: 10px; margin-bottom: 10px;">
+          <div class="col" style="margin-top: 10px; margin-bottom: 10px">
             <div class="card">
               <div class="card-header">
-                <h5 class="title-left">Password Generator</h5>
+                <h5 class="title-left">Eat-Da-Burger</h5>
               </div>
               <div class="card-body">
                 <p class="card-text">
@@ -388,7 +332,7 @@
                 border-style: solid;
                 border-color: rgba(189, 173, 173, 0.568);
               "
-              alt="password-generator"
+              alt="da-burger"
             />
           </div>
         </div>
